# spanish-nif

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  flake.nix  mkdocs.yml  pyproject.toml
.github/: SECURITY.md
.github/ISSUE_TEMPLATE/: bug.md  feature_request.md  question.md
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: contributing.md  dni.md  index.md  nie.md  nif.md  reference.md
src/spanish_nif/: __init__.py  _base.py  dni.py  nie.py  nif.py  version.py
tests/: test_base.py  test_dni.py  test_nie.py  test_nif.py
